Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <li>A routine to count the branches and the volume of the vessels;</li>
 </ul>
 
-<p><img src="https://moreirasm.files.wordpress.com/2015/04/vegf_evol.png" alt=""></p>
+<p><img src="https://moreirasm.files.wordpress.com/2015/10/git1.png" alt=""></p>
       </section>
     </div>
 
