--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <li>A routine to count the branches and the volume of the vessels;</li>
 </ul>
 
-<p><img src="http://moreirasm.files.wordpress.com/2015/10/git1.png" alt=""></p>
+<p><img src="http://moreirasm.files.wordpress.com/2015/10/git1-e1445266842982.png" alt=""></p>
       </section>
     </div>
 
