--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
 
     <div class="container">
       <section id="main_content">
-        <h1>
-<a id="angiogenesis-project" class="anchor" href="#angiogenesis-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Angiogenesis Project</h1>
+        <h2>
+<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>This project is hosted by the <a href="http://condmat.lca.uc.pt/">Centre for Computational Physics</a> at <a href="www.uc.pt">University of Coimbra</a> 
 and consists in a phase-field model for tumor angiogenesis. The model is based on the paper published by
 <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0019989">Travasso et al. (2011)</a> with some physical and computational improvements.</p>
 
-<p>Stable version:</p>
+<h3>
+<a id="stable-version" class="anchor" href="#stable-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Stable version:</h3>
 
 <ul>
 <li>The hypoxic cells now has volume;</li>
@@ -43,13 +44,15 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <li>We have had implemented a thinning algorithm proposed by <a href="http://www.sciencedirect.com/science/article/pii/S0167865598000312">Palàgyi and Kuba</a>;</li>
 </ul>
 
-<p>Unstable and current working on:</p>
+<h3>
+<a id="unstable-and-currently-working-on" class="anchor" href="#unstable-and-currently-working-on" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unstable and currently working on:</h3>
 
 <ul>
 <li>Coupling blood flow and the hypoxic cell deactivation;</li>
 </ul>
 
-<p>Next features:</p>
+<h3>
+<a id="next-features" class="anchor" href="#next-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Next features:</h3>
 
 <ul>
 <li>A routine to count the branches and the volume of the vessels;</li>
