Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
 
-<p>This project is hosted by the <a href="http://condmat.lca.uc.pt/">Centre for Computational Physics</a> at <a href="www.uc.pt">University of Coimbra</a> 
+<p>This project is hosted by the <a href="http://condmat.lca.uc.pt/">Centre for Computational Physics</a> at the <a href="www.uc.pt">University of Coimbra</a> 
 and consists in a phase-field model for tumor angiogenesis. The model is based on the paper published by
 <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0019989">Travasso et al. (2011)</a> with some physical and computational improvements.</p>
 
