Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <a id="stable-version" class="anchor" href="#stable-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Stable version:</h3>
 
 <ul>
-<li>The hypoxic cells now has volume;</li>
-<li>The system is modeled in three dimensions;</li>
+<li>The hypoxic cells now have volume;</li>
+<li>The system is modelled in three dimensions;</li>
 <li>We have had implemented a thinning algorithm proposed by <a href="http://www.sciencedirect.com/science/article/pii/S0167865598000312">Palàgyi and Kuba</a>;</li>
 </ul>
 
