--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Developing a 3D phase-field model for tumor angiogenesis</h2>
 
         <section id="downloads">
-          <a href="https://github.com/phydev/angio-serial-3d/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/phydev/angio-serial-3d/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/phydev/angio-serial-3d" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/phydev/angio/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/phydev/angio/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/phydev/angio" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -58,7 +58,7 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <li>A routine to count the branches and the volume of the vessels;</li>
 </ul>
 
-<p><img src="http://moreirasm.files.wordpress.com/2015/10/git1-e1445266842982.png" alt=""></p>
+<p><img src="https://i1.wp.com/moreirasm.files.wordpress.com/2015/05/filme.gif" alt=""></p>
       </section>
     </div>
 
