Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 <a id="next-features" class="anchor" href="#next-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Next features:</h3>
 
 <ul>
-<li>A routine to count the branches and the volume of the vessels;</li>
+<li>A routine to count the branches and the volume of the vessels;
+<img src="https://i0.wp.com/moreirasm.files.wordpress.com/2015/05/vessels.gif" alt="">
+</li>
 </ul>
-
-<p><img src="https://i1.wp.com/moreirasm.files.wordpress.com/2015/05/filme.gif" alt=""></p>
       </section>
     </div>
 
