--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <div class="container">
       <section id="main_content">
         <h2>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
+<a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h2>
 
-<p>This project is hosted by the <a href="http://condmat.lca.uc.pt/">Centre for Computational Physics</a> at the <a href="www.uc.pt">University of Coimbra</a> 
+<p>This project is hosted by the <a href="http://cfisuc.fis.uc.pt/">CFisUC</a> at the <a href="www.uc.pt">University of Coimbra</a> 
 and consists in a phase-field model for tumor angiogenesis. The model is based on the paper published by
 <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0019989">Travasso et al. (2011)</a> with some physical and computational improvements.</p>
 
 <h3>
-<a id="stable-version" class="anchor" href="#stable-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Stable version:</h3>
+<a id="stable-version" class="anchor" href="#stable-version" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Stable version:</h3>
 
 <ul>
 <li>The hypoxic cells now have volume;</li>
@@ -45,14 +45,14 @@ and consists in a phase-field model for tumor angiogenesis. The model is based o
 </ul>
 
 <h3>
-<a id="unstable-and-currently-working-on" class="anchor" href="#unstable-and-currently-working-on" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unstable and currently working on:</h3>
+<a id="unstable-and-currently-working-on" class="anchor" href="#unstable-and-currently-working-on" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Unstable and currently working on:</h3>
 
 <ul>
 <li>Coupling blood flow and the hypoxic cell deactivation;</li>
 </ul>
 
 <h3>
-<a id="next-features" class="anchor" href="#next-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Next features:</h3>
+<a id="next-features" class="anchor" href="#next-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Next features:</h3>
 
 <ul>
 <li>A routine to count the branches and the volume of the vessels;
